--- a/index.html
+++ b/index.html
@@ -5,8 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button class="button button--theme-blue button--size-small">
+        <span class="button__text">sdfvdsfv</span>
+    </button>
+
+    <button class="button button--theme-light-blue button--size-medium">sdfvsdvf</button>
+
+    <button class="button button--theme-red button--size-large">sdfvsdvf</button>
+
+    <hr>
+
+    <button class="button button--theme-blue button--size-medium button--disabled">sdfvsdvf</button>
+
+    <button class="button button--theme-light-blue button--size-medium button--disabled">sdfvsdvf</button>
+
+    <button class="button button--theme-red button--size-medium button--disabled">sdfvsdvf</button>
+
+    <hr>
+
+
+
+    <div class="card">
+        <img src="https://ir.ozone.ru/s3/multimedia-i/wc300/6761316138.jpg" class="card__image">
+
+        <div class="card__price">
+            <span class="price price--theme-red price--size-large">11 249 ₽</span>
+            <span class="price price--theme-gray price--size-small">18 430 ₽</span>          
+        </div>
+
+        <h6 class="card__title">
+            aspsdmfpovdpov
+        </h6>
+
+        <button class="button button--theme-light-blue button--size-medium">Добавить в корзину</button>
+    </div>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
