--- a/grid.html
+++ b/grid.html
@@ -20,7 +20,9 @@
             <div class="col col--size-6 col--size-md-12">
                 <img src="https://placehold.co/600x400" alt="">
             </div>
+        </div>
 
+        <div class="row">
             <div class="col col--size-6 col--size-md-12">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor adipisci id, in aliquam, corrupti molestiae eum incidunt odio, laborum nesciunt iure ullam! Fugit fuga explicabo enim minima ipsam! Quae, quod? Cum hic blanditiis aut, necessitatibus dolores quos at doloremque obcaecati repellat quas ducimus vitae voluptas. Nam repellendus excepturi, dignissimos error id harum aperiam eveniet? Pariatur hic qui ab, odio iste dignissimos nesciunt excepturi fuga beatae accusantium unde nisi at quas illum a, ad quidem necessitatibus autem, reprehenderit itaque minus. Cumque numquam quibusdam, quidem magni cupiditate minus. Doloribus, iusto sunt nihil, repellat corrupti itaque voluptatum minus modi dolorum iste eius dicta?
             </div>
@@ -28,7 +30,9 @@
             <div class="col col--size-6 col--size-md-12">
                 <img src="https://placehold.co/600x400" alt="">
             </div>
+        </div>
 
+        <div class="row">
             <div class="col col--size-6 col--size-md-12">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor adipisci id, in aliquam, corrupti molestiae eum incidunt odio, laborum nesciunt iure ullam! Fugit fuga explicabo enim minima ipsam! Quae, quod? Cum hic blanditiis aut, necessitatibus dolores quos at doloremque obcaecati repellat quas ducimus vitae voluptas. Nam repellendus excepturi, dignissimos error id harum aperiam eveniet? Pariatur hic qui ab, odio iste dignissimos nesciunt excepturi fuga beatae accusantium unde nisi at quas illum a, ad quidem necessitatibus autem, reprehenderit itaque minus. Cumque numquam quibusdam, quidem magni cupiditate minus. Doloribus, iusto sunt nihil, repellat corrupti itaque voluptatum minus modi dolorum iste eius dicta?
             </div>
@@ -36,7 +40,9 @@
             <div class="col col--size-6 col--size-md-12">
                 <img src="https://placehold.co/600x400" alt="">
             </div>
+        </div>
 
+        <div class="row">
             <div class="col col--size-6 col--size-md-12">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor adipisci id, in aliquam, corrupti molestiae eum incidunt odio, laborum nesciunt iure ullam! Fugit fuga explicabo enim minima ipsam! Quae, quod? Cum hic blanditiis aut, necessitatibus dolores quos at doloremque obcaecati repellat quas ducimus vitae voluptas. Nam repellendus excepturi, dignissimos error id harum aperiam eveniet? Pariatur hic qui ab, odio iste dignissimos nesciunt excepturi fuga beatae accusantium unde nisi at quas illum a, ad quidem necessitatibus autem, reprehenderit itaque minus. Cumque numquam quibusdam, quidem magni cupiditate minus. Doloribus, iusto sunt nihil, repellat corrupti itaque voluptatum minus modi dolorum iste eius dicta?
             </div>
