--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/button.css">
 </head>
 <body>
+    <h3>темы</h3>
     <button class="button button--theme-blue button--size-small">
         <span class="button__text">sdfvdsfv</span>
     </button>
@@ -17,7 +18,8 @@
 
     <button class="button button--theme-red button--size-large">sdfvsdvf</button>
 
-    <hr>
+    
+    <h3>размеры</h3>
 
     <button class="button button--theme-blue button--size-medium button--disabled">sdfvsdvf</button>
 
